--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 # $File: //member/autrijus/cpanplus/dist/README $
-# $Revision: #5 $ $Change: 3564 $ $DateTime: 2002/03/27 05:03:47 $
+# $Revision: #10 $ $Change: 3825 $ $DateTime: 2002/04/09 11:17:33 $
 
 This is the README file for CPANPLUS, Ameliorated interface to
 the Comprehensive Perl Archive Network, by Jos Boumans.
@@ -7,6 +7,9 @@ the Comprehensive Perl Archive Network, by Jos Boumans.
 Please type "perldoc CPANPLUS" after installation to see the
 module usage information. For shell usage, please consult
 "perldoc cpanp"; the FAQ is available as "perldoc CPANPLUS::FAQ".
+
+You may also want to read the "ChangeLog" file, which describes new
+features, bugfixes and additional notes for this release.
 
 ### PLEASE NOTE ###################################################
 
@@ -32,8 +35,42 @@ utility before installation. It's available at:
 
     ftp://ftp.microsoft.com/Softlib/MSLFILES/nmake15.exe
 
-Please download the file, save it to your windows directory, and run it
-from there; that will create the 'nmake.exe' file needed by CPANPLUS.
+If you are connected to the internet, "perl Makefile.PL" is capable
+of automatically fetch it, and install into your windows directory;
+all you have to do is to answer 'y' to this question:
+
+    Required executable 'nmake' not found. Install it? [Y/n]:
+
+However, if you are not online, or wish to install 'nmake' into
+another directory, then please download the file manually, save it to
+a directory in %PATH (e.g. C:\WINDOWS\COMMAND), then launch the MS-DOS
+command line shell, 'cd' to that directory, and run 'nmake15.exe' from
+there; that will create the 'nmake.exe' file needed by CPANPLUS.
+
+You may then resume the installation process above, but replace 'make'
+with 'nmake' in the last three lines.
+
+* Notes on CPAN testing
+
+Starting from version 0.03, CPANPLUS offers several features to query and
+report module testing results.
+
+For example, typing "cpanp -c DBI" in the command line (or "c DBI" in
+the CPANPLUS default shell) will display the test results of latest
+DBI package.
+
+The "cpansmoke DBI" command will test (but not install) the DBI package,
+and send reports back to testers.cpan.org. If you have set the 'cpantest'
+configuration variable to true (see below), "t DBI" in the default shell
+will do the same thing for you.
+
+If you wish to report module test results as part of installation
+process, please answer 'Y' to the "Report tests results? [y/N]:"
+question during the interactive configuration. You can type 's conf'
+in the CPANPLUS Shell to start the configure process.
+
+Please consult "perldoc cpansmoke", "perldoc cpantest" and CPAN Tester's
+Website (http://testers.cpan.org/) for detailed information.
 
 * Contact
 
@@ -53,3 +90,37 @@ All rights reserved.  You can redistribute and/or modify
 this bundle under the same terms as Perl itself.
 
 See <http://www.perl.com/perl/misc/Artistic.html>.
+
+* Legal statement
+
+This distribution bundles several programs and modules in bin/,
+inc/ and t/lib/ directories under the Perl license; modules in
+the latter two directories are not installed. This aggregation
+mandates a declaration on their copyrights, as shown below:
+
+The 'bin/cpantest' program is
+    Copyright (c) 1999 Kurt Starsinic.
+    Copyright (c) 2002 Autrijus Tang.
+
+ExtUtils::AutoInstall is
+    Copyright 2001, 2002 by Autrijus Tang <autrijus@autrijus.org>.
+
+Test::More is
+    Copyright 2001 by Michael G Schwern <schwern@pobox.com>.
+
+Test::Builder is
+    Copyright 2001 by chromatic <chromatic@wgz.org>,
+                      Michael G Schwern <schwern@pobox.com>.
+
+File::Spec and File::Spec::* are authored by
+    Kenneth Albanowski <kjahds@kjahds.com>,
+    Andy Dougherty <doughera@lafcol.lafayette.edu>,
+    Andreas Koenig <A.Koenig@franz.ww.TU-Berlin.DE>,
+    Tim Bunce <Tim.Bunce@ig.co.uk>.
+    VMS support by Charles Bailey <bailey@newman.upenn.edu>.
+    OS/2 support by Ilya Zakharevich <ilya@math.ohio-state.edu>.
+    Mac support by Paul Schinder <schinder@pobox.com>.
+    abs2rel() and rel2abs() written by Shigio Yamaguchi <shigio@tamacom.com>,
+    modified by Barrie Slaymaker <barries@slaysys.com>.
+    splitpath(), splitdir(), catpath() and catdir() by Barrie Slaymaker.
+
