Import of KANE/CPANPLUS-0.033 from CPAN.
gitpan-cpan-distribution: CPANPLUS
gitpan-cpan-version:      0.033
gitpan-cpan-path:         KANE/CPANPLUS-0.033.tar.gz
gitpan-cpan-author:       KANE
gitpan-cpan-maturity:     released

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # $File: //member/autrijus/cpanplus/dist/AUTHORS $
-# $Revision: #5 $ $Change: 4042 $ $DateTime: 2002/04/30 10:59:09 $
+# $Revision: #6 $ $Change: 4063 $ $DateTime: 2002/04/30 17:11:18 $
 
 [Credits]
 
@@ -37,6 +37,7 @@ Graham Barr		(GBARR)
 Jorrit Waalboer
 Jochen Stenzel		(JSTENZEL)
 Kay Roepke
+Lee Goddard		(LGODDARD)
 Mark Fowler
 Mark-Jason Dominus	(MJD)
 Matt Sergeant		(MSERGEANT)
