--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
-# $File: //member/autrijus/cpanplus/dist/AUTHORS $
-# $Revision: #6 $ $Change: 4063 $ $DateTime: 2002/04/30 17:11:18 $
+# $File: //member/autrijus/cpanplus/devel/AUTHORS $
+# $Revision: #7 $ $Change: 4087 $ $DateTime: 2002/05/02 01:07:02 $
 
 [Credits]
 
@@ -30,19 +30,24 @@ patches or suggestions, or their bug reports or comments have inspired
 the appropriate patches.  Corrections, additions, deletions welcome:
 
 Andy Lester		(PETDANCE)
+Andreas Marcel Riechert
 Barrie Slaymaker	(RBS)
 Chia-Liang Kao		(CLKAO)
 Dave Rolsky		(DROLSKY)
 Graham Barr		(GBARR)
-Jorrit Waalboer
 Jochen Stenzel		(JSTENZEL)
+Jorrit Waalboer
+Jost Krieger
 Kay Roepke
 Lee Goddard		(LGODDARD)
 Mark Fowler
 Mark-Jason Dominus	(MJD)
 Matt Sergeant		(MSERGEANT)
+Peter Barabas
 Peter Sergeant		(SARGIE)
 Randy J. Ray		(RJRAY)
+Randy Kobes		(RKOBES)
 Robert S Creager
 Ton Hospel
 Tony Cook		(TONYC)
+Yves Orton		(YVES)
