--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,37 @@
 # $File: //member/autrijus/cpanplus/dist/ChangeLog $
 # $Revision: #19 $ $Change: 4066 $ $DateTime: 2002/04/30 18:02:42 $
 
+[Changes for 0.034 - June 1, 2002]
+
+This is primarily a bug-fix version to address various bugs found in testing-
+related functions.
+
+* Bug fixes (and their first reporters):
+
+ - Default.pm may warn about 'next' statements inside eval. (Peter Barabas)
+
+ - Win32 was having problem with double-quote commands in Make.pm. (Yves Orton)
+
+ - Report.pm now closes the report filehandle before sending it. (Jost Krieger)
+
+ - The "'" character in user-entered module names will now expand to "::".
+
+ - New CPANPLUS::Internals::System module has fixed problems caused by $|=1.
+
+ - Makefile.PL on VMS and MacPerl should now work better.
+
+ - Setup.pm now defaults to use passive FTP.
+
+ - Report.pm was sending bogus FAILs for OS-specific modules.
+
+ - Report.pm now detects missing dependencies and sends recommendations.
+
+* New Features
+
+ - New 'v' command in default shell to re-display the version banner.
+
+ - The 'o' command now takes optional arguments to limit modules checked.
+
 [Changes for 0.033 - May 1, 2002]
 
 Following the 'next-day followup' tradition, this is _yet another_ bugfix
